# bevy-animation-test

./: Cargo.toml
assets/shaders/: bar.wgsl
src/: bar.rs  main.rs
