[package]
name = "muzik"
version = "0.1.0"
edition = "2021"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3


[dependencies]
bevy = { git = "https://github.com/bevyengine/bevy.git", rev = "846a871cb2761f61db1ba614f9830965f25ff33a", features = ["dynamic_linking"] }

[[bin]]
name = "muzik"
path = "src/main.rs"

[[bin]]
name = "dev"
path = "src/_main.rs"
